# picturium

./: .env.example  .gitignore  Cargo.toml  FUNDING.yml  README.md  dev.sh  flake.nix  hmac.php  test.sh
docker/: base.sh  base.yml  build.sh  build.yml  dev.sh  dev.yml
examples/: generate_token.php  hmac.php
src/: crypto.rs  main.rs  routes.rs
src/cache/: buster.rs  mod.rs
src/parameters/: aspect_ratio.rs  background.rs  crop.rs  format.rs  load.rs  mod.rs  origin.rs  rotate.rs  thumbnail.rs
src/pipeline/: background.rs  crop.rs  finalize.rs  icc.rs  load.rs  mod.rs  mpv_thumb.rs  rasterize.rs  resize.rs  rotate.rs  thumbnail.rs
src/services/: dimensions.rs  formats.rs  mod.rs  scheduler.rs  vips.rs
