[package]
name = "picturium"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
dotenv = "0.15.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["serde_derive"] }
simplelog = "0.12.2"
serde_json = "1.0.115"
ring = "0.17.8"
data-encoding = "2.5.0"
libvips = "1.7.0"
actix-files = "0.6.5"
num_cpus = "1.16.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
clokwerk = "0.4.0"
walkdir = "2.5.0"
picturium-libvips = "0.1.0"
